# engine-algorithms

./: .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  appveyor.yml  bootstrap.py  bootstrap.sh  main.cpp
lib/: CMakeLists.glew.in  CMakeLists.glfw.in  CMakeLists.googletest.in  CMakeLists.txt  glbinding.cmake  glew.cmake  glfw.cmake  glm.cmake  googletest.cmake  sfml.cmake
resources/: color.fs  color.vs  lit.fs  lit.vs
resources/renderobjects/cube/: cube.fs
src/: CMakeLists.txt  config.hpp  engine-algorithms.cpp  engine-algorithms.test.cpp  glm.hpp  main.cpp
src/auxiliary/: options.cpp  options.hpp
src/core/: camera.cpp  camera.hpp  engine.hpp  message.hpp  object.cpp  object.hpp  world.cpp  world.hpp
src/engine/: CMakeLists.txt
src/engine/auxiliary/: check.hpp  cube.hpp  options.cpp  options.hpp  timer.cpp  timer.hpp
src/engine/components/: collider.cpp  collider.hpp  color.hpp  hierarchical.cpp  hierarchical.hpp  hierarchy.cpp  hierarchy.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  physics.hpp  projection.cpp  projection.hpp  projector.cpp  projector.hpp  shader.cpp  timer.cpp  timer.hpp  transform.cpp  transform.hpp  window.cpp  window.hpp
src/engine/components/colliders/: alligned-box-collider.cpp  alligned-box-collider.hpp  cube-collider.hpp  sphere-collider.cpp  sphere-collider.hpp  sphere.cpp  sphere.hpp
src/engine/components/materials/: mesh-material.cpp  mesh-material.hpp  meshmaterial.cpp  meshmaterial.hpp
src/engine/core/: camera.hpp  component.cpp  component.hpp  engine.cpp  engine.hpp  entity.cpp  entity.hpp  field.hpp  fields.hpp  object.hpp  scene.hpp  system.cpp  system.hpp  typecontainer.hpp  typemap.hpp
src/engine/core/gpu/: gpumodel.cpp  gpumodel.hpp  gpuprogram.cpp  gpuprogram.hpp  shader.cpp  shader.hpp
src/engine/entities/: camera.hpp  collisionobject.hpp  display.hpp  gameobject.cpp  gameobject.hpp  gpucache.hpp  physicsobject.hpp  profiler.hpp  renderobject.cpp  renderobject.hpp
src/engine/input/: file.cpp  file.hpp  model.cpp  model.hpp  options.cpp  options.hpp
src/engine/systems/: lightrenderer.cpp  lightrenderer.hpp  meshrenderer.cpp  meshrenderer.hpp  octree.cpp  octree.hpp  refresher.cpp  refresher.hpp  renderer.cpp  renderer.hpp  simulator.cpp  simulator.hpp
src/game/: CMakeLists.txt  algorithms.cpp  game.cpp  game.hpp  main.cpp
src/input/: c_getopt.h  options.cpp
src/mge/auxiliary/: Hex.hpp
src/mge/auxiliary/octree/: Ball.cpp  Ball.hpp  OcNode.cpp  OcNode.hpp
src/mge/behaviours/: AbstractBehaviour.cpp  AbstractBehaviour.hpp  AbstractLight.cpp  AbstractLight.hpp  CameraBehaviour.cpp  CameraBehaviour.hpp  DirectionalLight.cpp  DirectionalLight.hpp  KeysBehaviour.cpp  KeysBehaviour.hpp  LookAt.cpp  LookAt.hpp  OrbitBehaviour.cpp  OrbitBehaviour.hpp  PointLight.cpp  PointLight.hpp  RotatingBehaviour.cpp  RotatingBehaviour.hpp  SpotLight.cpp  SpotLight.hpp
src/mge/core/: AbstractGame.cpp  AbstractGame.hpp  Camera.cpp  Camera.hpp  GameObject.cpp  GameObject.hpp  Mesh.cpp  Mesh.hpp  Message.hpp  Renderer.cpp  Renderer.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture.cpp  Texture.hpp  World.cpp  World.hpp
src/mge/materials/: AbstractMaterial.hpp  ColorMaterial.cpp  ColorMaterial.hpp  LitMaterial.cpp  LitMaterial.hpp  TerrainMaterial.cpp  TerrainMaterial.hpp  TextureMaterial.cpp  TextureMaterial.hpp  VertexLitMaterial.cpp  VertexLitMaterial.hpp  WobbleMaterial.cpp  WobbleMaterial.hpp
src/mge/scenes/: OctreeScene.cpp  OctreeScene.hpp
src/mge/util/: DebugHud.cpp  DebugHud.hpp  InputHandler.cpp  InputHandler.h
test/: CMakeLists.txt  main.test.cpp  options.test.cpp  vec.aux.hpp
test/auxiliary/: mat.aux.hpp  options.test.cpp
test/components/: hierarchical.test.cpp  transform.test.cpp
test/core/: component.test.cpp  engine.test.cpp  entity.test.cpp  fields.test.cpp  object.test.cpp  system.test.cpp  typemap.test.cpp  world.test.cpp
test/engine-tests/: CMakeLists.txt
test/engine-tests/auxiliary/: mat.aux.hpp  timer.test.cpp
test/engine-tests/components/: hierarchy.test.cpp  material.test.cpp  mesh.test.cpp  projection.test.cpp  projector.test.cpp  timer.test.cpp  transform.test.cpp
test/engine-tests/components/colliders/: sphere.test.cpp
test/engine-tests/core/: camera.test.cpp  component.test.cpp  entity.test.cpp  scene.test.cpp  typemap.test.cpp
test/engine-tests/core/gpu/: gpumodel.test.cpp  gpuprogram.test.cpp  shader.test.cpp
test/engine-tests/entities/: camera.test.cpp  renderobject.test.cpp
test/engine-tests/input/: file.test.cpp  model.test.cpp  options.test.cpp
test/input/: options.test.cpp
test/test-resources/: color.vs  cube.vs
test/test-resources/engine-test-resources/: color.fs  color.vs
